User checkpoint: Change card and navigation icons color to white.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -74,7 +74,7 @@ body {
 
 /* Íconos y elementos destacados */
 .card-icon i, .nav-link i {
-    color: #ffd700 !important;
+    color: #ffffff !important;
 }
 
 /* Elementos de navegación */
