--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 </head>
 
 <body class="d-flex flex-column vh-100">
+    {% if not request.endpoint == 'login' %}
     <nav class="navbar navbar-dark bg-dark px-6">
         <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
             <i class="fas fa-bus me-2"></i>
@@ -69,7 +70,7 @@
         {% block content %}{% endblock %}
     </div>
 
-    {% if current_user.is_authenticated %}
+    {% if current_user.is_authenticated and not request.endpoint == 'login' %}
     <nav class="navbar fixed-bottom navbar-dark bg-dark bottom-nav py-3">
         <div class="container-fluid d-flex justify-content-around">
             <a class="nav-link text-center" href="{{ url_for('home') }}">
