--- a/templates/report_incident.html
+++ b/templates/report_incident.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block styles %}
+  {{ super() }}
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/report_incident.css') }}">
+{% endblock %}
+
 {% block content %}
 <div class="main-content mb-3">
     <div class="container">
