--- a/templates/report_incident.html
+++ b/templates/report_incident.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="main-content">
+<div class="main-content report-incident">
   <div class="container">
     <h1 class="welcome-title text-center">Reportar Incidente</h1>
     <div class="content-wrapper">
